UTF-8 para el html5 del gráfico. [#34]

--- a/resources/chart/html/chart.html
+++ b/resources/chart/html/chart.html
@@ -2,19 +2,20 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Gráfico de interacción en UbuVirtual</title>
+    <link rel="stylesheet" href="../css/chart.css">
 	<script type="text/javascript" src="../js/Chart.bundle.js"></script>
-  <script type="text/javascript" src="../js/utils.js"></script>
- 
-<script type="text/javascript" src="../js/Chart.js"></script>
+    <script type="text/javascript" src="../js/utils.js"></script>
+    <script type="text/javascript" src="../js/Chart.js"></script>
 
-  <style>
-    canvas {
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-    }
-    </style>
+        <style>
+            canvas {
+                -moz-user-select: none;
+                -webkit-user-select: none;
+                -ms-user-select: none;
+            }
+        </style>
 </head>
 
 <body>
